src/test/ui/consts/min_const_fn/min_const_fn_dyn.stderr
error: trait bounds other than `Sized` on const fn parameters are unstable
  --> $DIR/min_const_fn_dyn.rs:21:5
   |
LL |     x.0.field;
   |     ^^^^^^^^^

error: trait bounds other than `Sized` on const fn parameters are unstable
  --> $DIR/min_const_fn_dyn.rs:24:66
   |
LL | const fn no_inner_dyn_trait_ret() -> Hide { Hide(HasDyn { field: &0 }) }
   |                                                                  ^^

error: aborting due to 2 previous errors

